style: OCD
