# src/users/users.route.js
@@ -3,10 +3,10 @@
 import express from 'express';
 const router = express.Router();
 
-import { getAllUsersController, createUserController } from './users.controller.js';
+import { createUserController, getAllUsersController } from './users.controller.js';
 import authMiddleware from '../auth/auth.middleware.js';
 
-router.get('/', authMiddleware, getAllUsersController);
 router.post('/', createUserController);
+router.get('/', authMiddleware, getAllUsersController);
 
 export default router;
